[package]
name = "stylus-evm-precompiles"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["arbitrum, ethereum", "stylus", "evm"]
description = "Playground for playing with Ethereum Precompiles in Stylus smart contracts."

[dependencies]
alloy-primitives = "0.7.6"
alloy-sol-types = "0.7.6"
stylus-sdk = "0.5.2"
stylus-proc = "0.5.2"
mini-alloc = "0.4.2"
hex = { version = "0.4", default-features = false }

[dev-dependencies]

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "stylus-evm-precompiles"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
